Disable trace mode in KmPlot before deleting tracing curve from the plot

BUG: 325627
Differential Revision: https://phabricator.kde.org/D16324